# semantic-benchmark

./: LICENSE  README.md  pyproject.toml
src/semantic_benchmark/: __init__.py  semantic.py
src/semantic_benchmark/rocrate/: __init__.py  create.py  validation.py
src/semantic_benchmark/rohub/: __init__.py  annotation_config.json  download.py  provenance.py  rohub_config.json
src/semantic_benchmark/semantics/: __init__.py
