[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-benchmark"
version = "0.1.2"
description = "Reusable helpers for semantic benchmark metadata, RO-Crate aggregation, and RoHub provenance workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Mahdi Jafarkhani", email = "mahdi.jafarkhani@tik.uni-stuttgart.de" },
]
keywords = ["benchmark", "metadata", "provenance", "ro-crate", "rohub"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rdflib",
]

[project.optional-dependencies]
rocrate = [
    "rocrate",
    "roc-validator",
]
rohub = [
    "pandas",
    "rohub",
]
all = [
    "pandas",
    "roc-validator",
    "rocrate",
    "rohub",
]

[project.urls]
Homepage = "https://github.com/Simulation-Benchmarks/semantic-benchmark"
Repository = "https://github.com/Simulation-Benchmarks/semantic-benchmark.git"
Issues = "https://github.com/Simulation-Benchmarks/semantic-benchmark/issues"

[project.scripts]
create-semantic-benchmark-rocrate = "semantic_benchmark.rocrate.create:main"
download-semantic-benchmark = "semantic_benchmark.rohub.download:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"semantic_benchmark.rohub" = ["*.json"]
